Improve color contrast, add about page, fix site navigation hopefully

--- a/src/styles/_10_defaults.css
+++ b/src/styles/_10_defaults.css
@@ -155,4 +155,10 @@ section + section {
   main {
     padding: var(--spc-half) var(--spc);
   }
+
+  main.single-column {
+    max-width: 40rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
